--- a/cp2425t/cp2425t.tex
+++ b/cp2425t/cp2425t.tex
@@ -936,9 +936,11 @@ O seu tipo, neste contexto, é definido como: \ensuremath{\Varid{a}\mathbin{::}[
 
 \subsection*{Problema 4}
 
+1. Nesta pergunta, pretende-se definir por completo, a biblioteca \ensuremath{\Conid{Expr}}, à semelhança das outras bibliotecas de estruturas fornecidas.
+
 Definição do tipo de \ensuremath{\Conid{Expr}}:
 
-Cálculo de outExpr:
+Para o cálulo de \ensuremath{\Varid{outExpr}}, partimos da afirmação \ensuremath{\Varid{outExpr}\comp \Varid{inExpr}\mathrel{=}\Varid{id}},
 
 \begin{eqnarray*}
 \start
@@ -992,7 +994,7 @@ Definindo, então, \ensuremath{\Varid{recExpr}} como:
 \ColumnHook
 \end{hscode}\resethooks
 
-\emph{Ana + cata + hylo}:
+Definição da triologia ana-cata-hylo:
 
 Começando pelo catamorfismo de \ensuremath{\Conid{Expr}}, temos:
 
